# ChangeLog for sys-cluster/glusterfs
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-cluster/glusterfs/ChangeLog,v 1.2 2009/09/22 20:01:14 alexxy Exp $

  22 Sep 2009; Alexey Shvetsov <alexxy@gentoo.org> files/glusterfs.initd:
  Update init script

*glusterfs-2.0.6 (22 Sep 2009)

  22 Sep 2009; Alexey Shvetsov <alexxy@gentoo.org>
  +files/50glusterfs-mode-gentoo.el, +glusterfs-2.0.6.ebuild,
  +files/glusterfs-2.0.6-docdir.patch,
  +files/glusterfs-2.0.6-parallel-make.patch, +files/glusterfs.confd,
  +files/glusterfs.initd, +files/glusterfs.vim, +metadata.xml:
  Version bump per bug #167955
