@@ -1,6 +1,9 @@
 # ChangeLog for sys-cluster/glusterfs
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/glusterfs/ChangeLog,v 1.2 2009/09/22 20:01:14 alexxy Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/glusterfs/ChangeLog,v 1.3 2009/09/23 07:42:37 alexxy Exp $
+
+  23 Sep 2009; Alexey Shvetsov <alexxy@gentoo.org> glusterfs-2.0.6.ebuild:
+  Drop berkdb support since its unstable for current glusterfs version
 
   22 Sep 2009; Alexey Shvetsov <alexxy@gentoo.org> files/glusterfs.initd:
   Update init script
